hphp/hack/test/typecheck/enum_class_label/memoized_invalid_syntax_int.php
<?hh

<<__Memoize(123)>>
function foo(): void {}
